top half of page correctly aligned

--- a/Code/ChristerpherHunter/HTML-CSS/lab_1/index.css
+++ b/Code/ChristerpherHunter/HTML-CSS/lab_1/index.css
@@ -19,58 +19,95 @@ html {
 }
 
 #center-para{
+    display: flex;
     text-align: center;
     margin: 0 200px;
+    padding-bottom: 20px;
+    /* max-width: 500px; */
+    justify-content: center;
 }
 
-.goulds {
-    width: 25vw;
-    height: 300px;
-    /* margin: auto; */
-    display: flex;  
-    /* flex-flow: wrap; */
-    /* gap: 100px 100px; */
-}
-img {
-    /* margin: auto; */
+.mid-section {
+    display: flex;
+    justify-content: center;
 }
 
-/*Main picture*/
-#main-gould{
-    
-    /* margin-bottom: 100px; */
-}
-
-#left-gould{
-margin-top: 50px;    
-}
-
-#right-gould{
-    
-    
-}
 
 #left-para{
     text-align: left;
-    margin-right: 1000px;
+
+    flex-grow: 1;
+    /* margin-right: 1000px; */
 }
 
 aside{
     padding: 5px;
     margin: 10px;
+    max-width: 400px;
 }
 
 #right-para{
     text-align: right;
-    margin-left: 1000px;
+    /* margin-left: 1000px; */
+    flex-grow: 1;
+}
+
+/*Main picture*/
+#main-gould{
+    
+    width: 550px;
+    height: 425px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+/* Smaller pictures and the circle */
+.goulds {
+    /* width: 25vw;*/
+    height: 300px; 
+    margin: 10px 0;
+    padding: 70px 0;
+    display: flex;  
+    /* flex-flow: wrap; */
+    /* gap: 100px 100px; */
+    justify-content: center;
+    align-content: space-between;
+}
+
+#left-gould{
+/* margin-right: 600px;     */
+}
+
+#cirlce {
+    width: 80px;
+    height: 80px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 40px;
+    background: red;
+}
+
+#inner_circle {
+    width: 60px;
+    height: 60px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    background: blue;
+}
+
+#right-gould{
+    /* margin-left: 400px; */
     
 }
 
+
 #credits {
     margin-left: 885px;
+    position: static;
     color: white;
     
-    }
+}
 
 #footer {
     background-image: linear-gradient(to right, yellow, blue);    
